tests/ui/errors/auxiliary/trait-debuginfo.rs
//@ compile-flags: --remap-path-prefix={{src-base}}=remapped
//@ compile-flags: --remap-path-scope=debuginfo

pub trait Trait: std::fmt::Display {}
